feat: Add acknowledgment status field update
update the `npsp__Acknowledgment_Status__c` field to "Acknowledged" when acknowledgment emails are successfully sent. The changes include updates to the core logic, test utilities, and validation commands, ensuring robust handling of acknowledgment status updates.

1. **DatabaseUpdateCommand.cls**:
   - Updated to set `npsp__Acknowledgment_Status__c` to "Acknowledged" when updating acknowledgment dates.
   - Maintained backward compatibility and error handling.

2. **AcknowledgementTestUtils.cls**:
   - Added query methods to include the acknowledgment status field.
   - Added assertion helper methods for verifying acknowledgment status updates.

3. **DonationAcknowledgementServiceImpl.cls**:
   - Modified `getOpportunitiesByIds` method to include `npsp__Acknowledgment_Status__c` in queries.

4. **Test Updates**:
   - **DatabaseUpdateCommandTest.cls**:
     - Added test cases to verify acknowledgment status updates.
     - Covered scenarios where acknowledgment status should and shouldn't be updated.
   - **DonationAcknowledgementServiceTest.cls** and **DonationAcknowledgementServiceImplTest.cls**:
     - Added assertions to verify acknowledgment status updates in end-to-end scenarios.
   - **OpportunityValidationCommandTest.cls**:
     - Updated to handle opportunities with acknowledgment status.

5. **Documentation**:
   - Updated code comments to reflect the new acknowledgment status functionality.
   - Updated README to include acknowledgment status field functionality in the "Features" section.

done, need rebase

--- a/force-app/main/default/classes/commands/DatabaseUpdateCommand.cls
+++ b/force-app/main/default/classes/commands/DatabaseUpdateCommand.cls
@@ -32,7 +32,8 @@ public with sharing class DatabaseUpdateCommand implements IAcknowledgementComma
         oppsToUpdate.add(
           new Opportunity(
             Id = oppResult.opportunityId,
-            npsp__Acknowledgment_Date__c = oppResult.acknowledgmentDate
+            npsp__Acknowledgment_Date__c = oppResult.acknowledgmentDate,
+            npsp__Acknowledgment_Status__c = 'Acknowledged' // New field update
           )
         );
       }
