--- a/force-app/main/default/classes/tests/services/DonationAcknowledgementServiceImplTest.cls
+++ b/force-app/main/default/classes/tests/services/DonationAcknowledgementServiceImplTest.cls
@@ -676,5 +676,10 @@ private class DonationAcknowledgementServiceImplTest {
       summary.contains('4 Opportunities'),
       'Summary should mention 4 Opportunities'
     );
+    // Verify acknowledgment status is set
+    AcknowledgementTestUtils.assertAcknowledgmentStatusSet(
+      successOpp.Id,
+      'Acknowledged'
+    );
   }
 }
